[bugfix] fix the height that was overflowed from its parent component weirdly, that wasn't calculate Topbar height, when add px (like 1600px or over 600px that is window size) to the message input box height by dragging separator. idk why but I put height 0% on its parent component and fixed it. It's scarry.

--- a/src-ui/windows/main_window/MainWindow.module.scss
+++ b/src-ui/windows/main_window/MainWindow.module.scss
@@ -5,42 +5,5 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between
-}
-
-.sidebar_section {
-    min-width: 23rem;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--dark_850_color);
-}
-
-.main_section {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    padding: 0 1.6rem 1rem 1.6rem;
-}
-
-.message_container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.separator {
-    width: 100%;
-    height: 1rem;
-    cursor: row-resize;
-    &:hover {
-        background-color: var(--dark_825_color);
-    }
-}
-
-.message_box_wrapper {
-    height: 60rem;
-    max-height: 80%;
 }
