--- a/src-ui/windows/main_window/main_section/message_container/MessageContainer.module.scss
+++ b/src-ui/windows/main_window/main_section/message_container/MessageContainer.module.scss
@@ -1,20 +1,24 @@
 @import "@color_variables";
 
 .container {
-    height: 100%;
+    height: 0%;
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
 .separator {
     width: 100%;
     height: 1rem;
     cursor: row-resize;
+    flex-shrink: 0;
     &:hover {
         background-color: var(--dark_825_color);
     }
 }
 
 .message_box_resize_wrapper {
-    max-height: 90%;
+    height: 10rem;
+    min-height: 3.8rem;
+    max-height: 80%;
 }
